Fixed jittery borders on safari

--- a/_scss/projects.scss
+++ b/_scss/projects.scss
@@ -15,6 +15,10 @@
         border-radius: 15px;
         position: relative;
         overflow: hidden;
+        -webkit-backface-visibility: hidden;
+        -moz-backface-visibility: hidden;
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
 
         img {
             margin: auto;
